Ajustando o arquivo de leitura e inserção